@@ -1,3 +1,8 @@
+2014-09-04  Guozhi Wei  <carrot@google.com>
+
+	PR target/62040
+	* gcc.target/aarch64/pr62040.c: New test.
+
 2014-09-04  Manuel López-Ibáñez  <manu@gcc.gnu.org>
 
 	* gcc.dg/cpp/endif-pedantic2.c: More general options do not
